# base-claude

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  INSTALL.md  README.md  preferences.md  pyproject.toml  settings.json  tutorial.md  uv-init.sh
.claude/: CLAUDE.md  settings.json
.claude/agents/: ai-engineer.md  api-documenter.md  architect-reviewer.md  build-engineer.md  cli-developer.md  code-improvement-scanner.md  code-reviewer.md  debugger.md  dependency-manager.md  documentation-engineer.md  fintech-engineer.md  git-workflow-manager.md  orchestrator.md  outer-ralph.md  quant-analyst.md  research-analyst.md  risk-manager.md  supervisor.md  task-executor.md  task-refiner.md
.claude/commands/: commit-push-pr.md  compact.md  milestone.md  prepare-task.md  workflow.md
.claude/rules/: delegator
agents/: ralph-improver.md  supervisor.md  unified-orchestrator.md  workflow-orchestrator.md
boris-workflow/: tutorial.md
docs/: AMPERSAND_TUTORIAL.md  ARCHITECTURE.md  AUTOMATED-WORKFLOW-GUIDE.md  INSTALL.md  QUICK-REFERENCE.md  SETUP_GUIDE.md  STATE-SCHEMA.md  SYSTEM-SUMMARY.md  UNIFIED-WORKFLOW-GUIDE.md  WORKFLOW-GUIDE.md  WORKFLOW.md
examples/: complex-example.md  example-automated-task.md  unified-complex-example.md  unified-simple-example.md
hooks/: format-python.sh
scripts/: install-global.sh  install-project.sh  uninstall-global.sh
skills/: automated-workflow.md  ralph.md  unified-workflow.md
task-writer/: skill.md
templates/: automated-task-template.md  unified-task-template.md
workflow/: AGENT-CATALOG.md  WORKFLOW-GUIDE.md  skill.md  task-template.md
(+15 files in other folders)
